--- a/homework-2-1/css/base.css
+++ b/homework-2-1/css/base.css
@@ -20,13 +20,17 @@ h2 {
 }
 
 .h2_title {
+    padding-top: 20px;
     padding-bottom: 53px;
     text-align: center;
-    color: #3677fd; 
+    /* color: #3677fd; */
     font-family: Lato;
     font-size: 50px;
     font-weight: 300;
     line-height: 35.12px;
+    background-image: linear-gradient(51deg, #3695ff 0%, #3564fc 100%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
 }
 
 .h3_title {
