--- a/homework-2-2/css/base.css
+++ b/homework-2-2/css/base.css
@@ -6,8 +6,13 @@ body {
 }
 
 button,
-input {
+input,
+textarea {
     outline: 0;
+}
+
+label {
+    padding: 10px;  
 }
 
 section {
@@ -31,4 +36,13 @@ section {
     letter-spacing: 0.55px;
     margin-top: 32px;
     margin-bottom: 7px;
+}
+
+.p__description {
+    color: #909090;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 23px;
+    letter-spacing: 0.38px;
+    text-align: center;
 }
